# materialize

./: Cargo.toml
.github/workflows/: mayhem.yml
src/adapter/: Cargo.toml
src/adapter/src/: catalog.rs  coord.rs
src/adapter/src/catalog/: config.rs
src/adapter/src/session/: vars.rs
src/cloud-resources/: Cargo.toml
src/compute/: Cargo.toml
src/config/: Cargo.toml
src/config/src/: backend.rs  frontend.rs  lib.rs  params.rs  value.rs
src/environmentd/: Cargo.toml
src/environmentd/src/: lib.rs
src/environmentd/tests/: util.rs
src/expr/: Cargo.toml
src/kafka-util/: Cargo.toml
src/orchestrator-kubernetes/: Cargo.toml
src/orchestrator-process/: Cargo.toml
src/orchestrator-tracing/: Cargo.toml
src/ore/: Cargo.toml
src/persist/: Cargo.toml
src/persist-client/: Cargo.toml
src/pgtest/: Cargo.toml
src/pgwire/: Cargo.toml
src/repr/: Cargo.toml
src/service/: Cargo.toml
src/sqllogictest/: Cargo.toml
src/sqllogictest/src/: runner.rs
src/ssh-util/: Cargo.toml
src/stash-debug/: Cargo.toml
src/stash-debug/src/: main.rs
src/storage/: Cargo.toml
src/storage-client/: Cargo.toml
src/testdrive/: Cargo.toml
