[package]
name = "mz-config"
description = "Materialize's configuration controller."
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "3.2.20", features = ["derive", "env"] }
futures = "0.3.25"
itertools = "0.10.5"
launchdarkly-server-sdk = { version = "1.0.0-beta.4" }
mz-build-info = { path = "../build-info" }
mz-orchestrator-tracing = { path = "../orchestrator-tracing" }
mz-ore = { path = "../ore", features = ["task", "tracing_"] }
mz-prof = { path = "../prof" }
mz-sql = { path = "../sql" }
mz-sql-parser = { path = "../sql-parser" }
once_cell = "1.16.0"
serde_json = "1.0.88"
tokio = { version = "1.22.0", features = ["fs", "rt", "sync", "net"] }
tokio-postgres = { git = "https://github.com/MaterializeInc/rust-postgres" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"

[target.'cfg(not(target_os = "macos"))'.dependencies]
# According to jemalloc developers, `background_threads` should always be
# enabled, except in "esoteric" situations that don't apply to Materialize
# (Namely: if the application relies on new threads not being created for whatever reason)
#
# See: https://github.com/jemalloc/jemalloc/issues/956#issuecomment-316224733
tikv-jemallocator = { version = "0.4.3", features = ["profiling", "stats", "unprefixed_malloc_on_supported_platforms", "background_threads"], optional = true }

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator", "mz-prof/jemalloc"]
tokio-console = ["mz-ore/tokio-console"]